--- a/.jshintrc
+++ b/.jshintrc
@@ -14,6 +14,7 @@
     "latedef": false,
     "trailing": true,
     "globals": {
+        "console": true,
         "angular": true,
         "module": true,
         "inject": true,
